# RobotProgramming

./: CmakeList.txt  README.md  RP_Rviz.rviz  build.sh  laser_scan.sh  move_robot.sh  robot_odometry.sh
multi_ws/multi/include/: lidar.h  robot.h  types.h  world.h
multi_ws/multi/src/: world.cpp
multi_ws/src/multi/: CMakeLists.txt  package.xml
multi_ws/src/multi/include/: lidar.h  misc.h  robot.h  simple_geometry.h  types.h  world.h
multi_ws/src/multi/launch/: startSim.launch
multi_ws/src/multi/rviz/: RP_Rviz.rviz
multi_ws/src/multi/src/: lidar.cpp  main.cpp  misc.cpp  robot.cpp  simple_geometry.cpp  world.cpp
multi_ws/src/multi/test_data/: 2rob_2li_unique.json
